[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "piggy", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=2.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
